--- a/css/index.css
+++ b/css/index.css
@@ -11,13 +11,9 @@ h1 {
 }
 
 .table{
-	font-weight:bold;
-	color: #EEAA0C;
-	font-family: Verdana, Geneva, sans-serif;
 	background-color: #7C8182;
 	margin-top: 75px;
 	width: 275px;
-	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 .leftForm{
@@ -48,4 +44,17 @@ h1 {
 	background-color: #7C8182;
 	font-weight: bold;
 	color:white;
+}
+
+.statLabel{
+	font-weight:bold;
+	color: #EEAA0C;
+	font-family: Verdana, Geneva, sans-serif;
+	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+
+.statValue{
+	font-weight:bold;
+	color: #EEAA0C;
+	font-family: Verdana, Geneva, sans-serif;
 }
