--- a/css/index.css
+++ b/css/index.css
@@ -23,7 +23,7 @@ td:first-child {
     border-radius:6px;
     -moz-border-radius:6px;
 	background-color: #7C8182;
-	margin-top: 75px;
+	margin-top: 120px;
 	width: 275px;
 }
 
@@ -65,4 +65,10 @@ td:first-child {
 
 .statLabel{
 	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
+}
+
+.topcorner{
+   position:absolute;
+   top:0;
+   right:0;
 }
