--- a/css/index.css
+++ b/css/index.css
@@ -1,11 +1,11 @@
 body {
-	background-color: #084854
+	background-color: #0B0C10
 }
 
 h1 {
 	text-align:center;
 	font-family:Impact, Charcoal, sans-serif;
-	color: #EEAA0C;
+	color: #66FCF1;
 	font-size: 48px;
 	text-shadow: -3px 0 black, 0 3px black, 3px 0 black, 0 -3px black;
 }
@@ -22,7 +22,7 @@ td:first-child {
     border:solid #ddd 1px;
     border-radius:6px;
     -moz-border-radius:6px;
-	background-color: #7C8182;
+	background-color: #1F2833;
 	margin-top: 120px;
 	width: 275px;
 }
@@ -52,23 +52,20 @@ td:first-child {
 .form-control{
 	height: 31px;
 	margin: 3px;
-	background-color: #7C8182;
+	background-color: #1F2833;
 	font-weight: bold;
-	color:white;
+	color:#C5C6C7;
 }
 
 .statLabel, .statValue{
 	font-weight:bold;
-	color: #EEAA0C;
+	color: #C5C6C7;
 	font-family: Verdana, Geneva, sans-serif;
-}
-
-.statLabel{
-	text-shadow: 1px 0 0 #000, 0 -1px 0 #000, 0 1px 0 #000, -1px 0 0 #000;
 }
 
 .topcorner{
    position:absolute;
    top:0;
    right:0;
+   margin-right: 5px;
 }
