--- a/css/index.css
+++ b/css/index.css
@@ -33,7 +33,8 @@ td:first-child {
 .team-left{
 	display:inline-block;
 	margin-right: 25px;
-	margin-left: 20%;
+	margin-left:275px;
+	opacity:0.5;
 }
 
 .team-right{
@@ -74,17 +75,18 @@ td:first-child {
 	margin: 3px;
 	background-color: #1F2833;
 	font-weight: bold;
-	color:#C5C6C7;
+	color:#FFFFFF;
 }
 
 .leftForm, .rightForm, .team-right{
 	display: inline-block;
 	position:absolute;
+	opacity:0.6;
 }
 
 .statLabel, .statValue{
 	font-weight:bold;
-	color: #C5C6C7;
+	color: #FFFFFF;
 	font-family: Verdana, Geneva, sans-serif;
 }
 
@@ -98,6 +100,21 @@ td:first-child {
    top:0;
    right:0;
    margin-right: 5px;
+}
+
+.player-image{
+	height:auto;
+}
+
+.image-left{
+	display:inline-block;
+	width:5%;
+}
+
+.image-right{
+	display:inline-block;
+	width:20%;
+	margin-left: 500px;
 }
 
 @media only screen and (max-width: 1645px) {
