--- a/css/index.css
+++ b/css/index.css
@@ -32,14 +32,10 @@ td:first-child {
 
 .team-left{
 	display:inline-block;
-	margin-right: 25px;
-	margin-left:275px;
-	opacity:0.5;
 }
 
 .team-right{
 	right:0px;
-	margin-right:20%
 }
 
 .team-name{
@@ -54,6 +50,10 @@ td:first-child {
 	display: inline-block;
 	width:200px;
 	margin-top:100px;
+}
+
+.leftForm{
+	margin-left:32%;
 }
 
 .rightForm{
@@ -81,7 +81,7 @@ td:first-child {
 .leftForm, .rightForm, .team-right{
 	display: inline-block;
 	position:absolute;
-	opacity:0.6;
+	opacity:0.8;
 }
 
 .statLabel, .statValue{
@@ -104,17 +104,30 @@ td:first-child {
 
 .player-image{
 	height:auto;
+	position:absolute;
+}
+
+.team-image{
+	height:auto;
+	position:absolute;
+	opacity:0.5;
+	width:1000px;
+	height:1000px;
+}
+
+.image-right2{
+	right:0px;
 }
 
 .image-left{
 	display:inline-block;
-	width:5%;
+	position:absolute;
 }
 
 .image-right{
 	display:inline-block;
-	width:20%;
-	margin-left: 500px;
+	position:absolute;
+	right:0px;
 }
 
 @media only screen and (max-width: 1645px) {
