--- a/css/index.css
+++ b/css/index.css
@@ -35,6 +35,8 @@ td:first-child {
 }
 
 .team-right{
+	display: inline-block;
+	position:absolute;
 	right:0px;
 }
 
@@ -77,7 +79,7 @@ td:first-child {
 	color:#FFFFFF;
 }
 
-.leftForm, .rightForm, .team-right{
+.leftForm, .rightForm {
 	display: inline-block;
 	position:absolute;
 	opacity:0.8;
@@ -130,21 +132,23 @@ td:first-child {
 }
 
 @media only screen and (max-width: 1645px) {
-	.team-left{
-		margin-left: 10%;
-	}
-
 	.team-right{
 		margin-right:5%;
 	}
 
-	.rightForm{
-		margin-right:20%;
+	.image-left2{
+		height:310px;
+		width:392px;
+	}
+
+	.image-right2{
+		height:310px;
+		width:392px;
 	}
 
 }
 
-@media only screen and (max-width: 1350px) {
+@media only screen and (max-width: 1400px) {
 	.team-left{
 		margin-left: 10px;
 	}
@@ -159,7 +163,7 @@ td:first-child {
 
 }
 
-@media only screen and (max-width: 1032px) {
+@media only screen and (max-width: 1325px) {
 	.team-left{
 		margin-left: 10px;
 	}
@@ -174,31 +178,33 @@ td:first-child {
 
 }
 
-@media only screen and (max-width: 960px) {
+@media only screen and (max-width: 1120px) {
 	.team-left{
 		margin-left: 10px;
 	}
 
 	.team-right{
-		margin-top: 400px;
 		margin-right:5px;
-		left:0;
+	}
+
+	.leftForm{
+		margin-top: 400px;
+		left:0px;
+		margin-left: 100px;
 	}
 
 	.rightForm{
 		margin-top: 400px;
-		margin-right:23%;
-		left:230px;
+		right:0;
+		margin-right: 100px;
 	}
 
-	.rightDropdown{
-		position:relative;
+	.leftDropdown{
 		width: 150px;
 	}
 
-	.team-name-right{
-		text-align:left;
-		margin-left:80px;
+	.rightDropdown{
+		width: 150px;
 	}
 
 }
